-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7, 8, 11, 17
-
Component/s: client-libs
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8273994 | 15.0.5 | Andrew Brygin | P3 | Resolved | Fixed | b02 |
| JDK-8273995 | 13.0.9 | Andrew Brygin | P3 | Resolved | Fixed | b02 |
| JDK-8266588 | 11.0.13-oracle | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8268462 | 11.0.13 | Zhengyu Gu | P3 | Resolved | Fixed | b01 |
| JDK-8266762 | 8u311 | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8266767 | 7u321 | Philip Race | P3 | Resolved | Fixed | b01 |
GL/gl.h
GL/glx.h
GL/glext.h
GL/glxext.h
GL/wglext.h
KHR/khrplatform.h
Need to update to the latest 21.0.3 version released on 2021-04-21 https://www.mesa3d.org
- backported by
-
JDK-8266588 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
-
JDK-8266762 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
-
JDK-8266767 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
-
JDK-8268462 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
-
JDK-8273994 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
-
JDK-8273995 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
- blocks
-
JDK-8262396 Update Mesa 3-D Headers to version 21.0.3
-
- Resolved
-
- clones
-
JDK-8232154 Update Mesa 3-D Headers to version 19.2.1
-
- Resolved
-
- relates to
-
JDK-8280786 Build failure on Solaris after 8262392
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/941ad85f
-
Commit
openjdk/jdk13u-dev/e7ceb39e
-
Commit
openjdk/jdk15u-dev/a6ab0c8a
-
Commit
openjdk/jdk/138d573c
-
Review
openjdk/jdk11u-dev/17
-
Review
openjdk/jdk13u-dev/264
-
Review
openjdk/jdk15u-dev/103
-
Review
openjdk/jdk/3854